@@ -1,3 +1,7 @@
+2014-11-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* dvipdfmx.test, xdvipdfmx.test: Also test --showpaper option.	
+
 2014-11-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* dvipdfmx.c, dpxconf.c, dpxconf.h: Add an option --showpaper which
